Release CeroxeAPI 1.0.0